Wrap work content in div and fix margin on paragraph element

--- a/src/styles.css
+++ b/src/styles.css
@@ -583,6 +583,7 @@ a {
     color: #FBFCFE;
     opacity: 0.7;
     line-height: 2em;
+    margin-bottom: 2em;
 
 }
 
